Added Footer & Merch Store Link

--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
         </ul>
 
         <ul class="social-media-list">
+          <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i
+            class="fa-brands fa-mixcloud"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i
                 class="fa-brands fa-twitter"></i></a></li>
-          <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i
-                class="fa-brands fa-mixcloud"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/djseanzie"><i
                 class="fa-brands fa-instagram"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://facebook.com/djseanzie"><i
                 class="fa-brands fa-facebook"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://streamlabs.com/omgitzseanzie/merch"><i class="fa-solid fa-store"></i></a></li>
         </ul>
 
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span
@@ -126,9 +127,12 @@
 
 
     <!-- ***************** FOOTER  ***************** -->
-    <footer>
-
+    <footer class="color-scheme">
+      <div>
+      <small>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Sean Milfort. All Rights Reserved.</small>
+    </div>
     </footer>
+    
   </main>
 </body>
 
