--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <ul class="social-media-list">
           <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i
             class="fa-brands fa-mixcloud"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://spotify.djseanzie.club"><i
+              class="fa-brands fa-spotify"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i
                 class="fa-brands fa-twitter"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/djseanzie"><i
