Added YouTube Music Redirection and Shortcut

--- a/index.html
+++ b/index.html
@@ -58,16 +58,12 @@
         </ul>
 
         <ul class="social-media-list">
-          <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i
-            class="fa-brands fa-mixcloud"></i></a></li>
-            <li><a target="_blank" rel="noopener noreferrer" href="https://spotify.djseanzie.club"><i
-              class="fa-brands fa-spotify"></i></a></li>
-          <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i
-                class="fa-brands fa-twitter"></i></a></li>
-          <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/djseanzie"><i
-                class="fa-brands fa-instagram"></i></a></li>
-          <li><a target="_blank" rel="noopener noreferrer" href="https://facebook.com/djseanzie"><i
-                class="fa-brands fa-facebook"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i class="fa-brands fa-mixcloud"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://spotify.djseanzie.club"><i class="fa-brands fa-spotify"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://ytmusic.djseanzie.club"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/djseanzie"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://facebook.com/djseanzie"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://streamlabs.com/omgitzseanzie/merch"><i class="fa-solid fa-store"></i></a></li>
         </ul>
 
