Updated redirection for Episode 13 of mix and added soundcloud

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         <ul class="social-media-list">
           <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i class="fa-brands fa-mixcloud"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://soundcloud.com/djseanzie"><i class="fa-brands fa-soundcloud"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://spotify.djseanzie.club"><i class="fa-brands fa-spotify"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://apple.djseanzie.club"><i class="fa-brands fa-apple"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://ytmusic.djseanzie.club"><i class="fa-brands fa-youtube"></i></a></li>
@@ -89,10 +90,11 @@
     <section class="main-section mixes-section color-scheme" id="mixes-section">
       <div data-aos="fade-up" class="content-wrap">
         <h2>MIXES</h2>
-        <p>Check out the latest mix from my mixcloud!</p>
+        <p>Check out the Latest Mix from my Mixcloud!</p>
+        <p><i>Also Available on my SoundCloud</i></p>
         <div class="mixes">
           <iframe width="100%" height="120"
-            src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fdjseanzie%2Fseanzie-radio-episode-12%2F"
+            src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fdjseanzie%2Fseanzie-radio-episode-13%2F"
             frameborder="0"></iframe>
         </div>
     </section>
