Updated Social Icons X

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,7 +63,7 @@
           <li><a target="_blank" rel="noopener noreferrer" href="https://spotify.djseanzie.club"><i class="fa-brands fa-spotify"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://apple.djseanzie.club"><i class="fa-brands fa-apple"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://ytmusic.djseanzie.club"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i class="fa-brands fa-x-twitter"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/djseanzie"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://facebook.com/djseanzie"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://streamlabs.com/omgitzseanzie/merch"><i class="fa-solid fa-store"></i></a></li>
