Added Threads to Page

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <li><a target="_blank" rel="noopener noreferrer" href="https://apple.djseanzie.club"><i class="fa-brands fa-apple"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://ytmusic.djseanzie.club"><i class="fa-brands fa-youtube"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/djseanzie"><i class="fa-brands fa-x-twitter"></i></a></li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://www.threads.net/@djseanzie"><i class="fa-brands fa-threads"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/djseanzie"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://facebook.com/djseanzie"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://streamlabs.com/omgitzseanzie/merch"><i class="fa-solid fa-store"></i></a></li>
@@ -90,8 +91,8 @@
     <section class="main-section mixes-section color-scheme" id="mixes-section">
       <div data-aos="fade-up" class="content-wrap">
         <h2>MIXES</h2>
-        <p>Check out the Latest Mix from my Mixcloud!</p>
-        <p><i>Also Available on my SoundCloud</i></p>
+        <p>Check out the Latest Mix from my <a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie">Mixcloud</a>!</p>
+        <p><i>Also Available on my <a target="_blank" rel="noopener noreferrer" href="https://soundcloud.com/djseanzie">SoundCloud</a></i></p>
         <div class="mixes">
           <iframe width="100%" height="120"
             src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fdjseanzie%2Fseanzie-radio-episode-14%2F"
