Updated Navigation to work better on mobile devices

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
           <li>
             <a href="#contact-me-section">Contact Me</a>
           </li>
+          <li class="social-link-buttton">
+            <a href="https://links.djseanzie.club/" target="_blank">Social Links</a>
+          </li>
         </ul>
 
-        <ul class="social-media-list">
+        <ul class="social-media-list social-list">
           <li><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/djseanzie"><i class="fa-brands fa-mixcloud"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://soundcloud.com/djseanzie"><i class="fa-brands fa-soundcloud"></i></a></li>
           <li><a target="_blank" rel="noopener noreferrer" href="https://spotify.djseanzie.club"><i class="fa-brands fa-spotify"></i></a></li>
